# scripts

./: .gitignore  README.md  pyproject.toml  settings.1.json  settings.2.json
AddHeaderSlashes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
addHeaderSlashes/utils/: filetools.py
addHeaderSlashes/utils_tests/: test_temp_path
lib/utils/: filetools.py
lib/utils_tests/: filetools_test.py
res/: example.json  settings.1.json  settings.3.json  test_file_1.json
